Feast of Legends: v1.1 update image links

--- a/Feast_of_Legends/feast_of_legends.css
+++ b/Feast_of_Legends/feast_of_legends.css
@@ -123,7 +123,7 @@ div.sheet-main {
   grid-gap: 6px;
   width:    650px; /* Defines the width and height of the sheet */
   height:   900px;
-  background-image: url(https://i.imgur.com/qKceron.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLborder.jpg?raw=true);
   background-size: 650px 900px; /* Sets the sheet border image to same size as sheet */
   background-repeat: no-repeat;
 }
@@ -135,7 +135,7 @@ on each individual   */
 
 div.sheet-logo{
   grid-area: logo;
-  background-image: url(https://i.imgur.com/N8oNFQ9.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLlogo.jpg?raw=true);
   background-size: 295px 180px;
   background-repeat: no-repeat;
   margin-left: 20px;
@@ -168,7 +168,7 @@ div.sheet-stats div:first-child span{
 
 
 div.sheet-stats div.sheet-stat-block{
-  background-image: url(https://i.imgur.com/i0fqhxv.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLstatblock.jpg?raw=true);
   background-repeat: no-repeat;
   background-size: contain;
   height: 65px;
@@ -201,7 +201,7 @@ div.sheet-stats span{
 
 div.sheet-resistance{
   grid-area: resistance;
-  background-image: url(https://i.imgur.com/SlEHxEm.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLblock3.jpg?raw=true);
   background-size: 290px 190px;
   background-repeat: no-repeat;
   margin-left: 20px;
@@ -244,7 +244,7 @@ div.sheet-name{
 }
 
 div.sheet-name div.sheet-section-small{
-  background-image: url(https://i.imgur.com/ia9MOUx.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLblock1.jpg?raw=true);
   background-size: contain;
   background-repeat: no-repeat;
   height: 50px;
@@ -266,7 +266,7 @@ div.sheet-name input{
 
 div.sheet-bio{
   grid-area: bio;
-  background-image: url(https://i.imgur.com/SlEHxEm.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLblock3.jpg?raw=true);
   background-size: 290px 210px;
   background-repeat: no-repeat; 
   padding-right: 25px;
@@ -285,7 +285,7 @@ div.sheet-bio textarea{
 
 div.sheet-gold{
   grid-area: gold;
-  background-image: url(https://i.imgur.com/ia9MOUx.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLblock1.jpg?raw=true);
   background-size: 290px 50px;
   background-repeat: no-repeat;
   padding-bottom: 20px;
@@ -306,7 +306,7 @@ div.sheet-gold input[type=number]{
 
 div.sheet-load{
   grid-area: load;
-  background-image: url(https://i.imgur.com/SlEHxEm.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLblock3.jpg?raw=true);
   background-size: 290px 210px;
   background-repeat: no-repeat;
   padding-right: 25px; 
@@ -339,7 +339,7 @@ div.sheet-load button.sheet-small{
 div.sheet-skilled{
   grid-area: skilled;
   align-items: start;
-  background-image: url(https://i.imgur.com/ia9MOUx.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLblock1.jpg?raw=true);
   background-size: 290px 50px;
   background-repeat: no-repeat;
   padding-bottom: 25px;
@@ -362,7 +362,7 @@ div.sheet-skilled input{
 
 div.sheet-order-skills{
   grid-area: order-skills;
-  background-image: url(https://i.imgur.com/SlEHxEm.jpg);
+  background-image: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Feast_of_Legends/images/FoLblock3.jpg?raw=true);
   background-size: 290px 190px;
   background-repeat: no-repeat;
   padding-right: 25px;
