M&M 3E: upload logo, minor fixes

--- a/Mutants and Masterminds 3E/mutants-and-masterminds.css
+++ b/Mutants and Masterminds 3E/mutants-and-masterminds.css
@@ -624,8 +624,22 @@ div.sheet-section-advantages textarea,
 div.sheet-section-equipment textarea {
     margin-top: 5px;}
 
+div.sheet-section-options{
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+    padding: 20px 0px 25px 90px;}
+
+div.sheet-section-options label{
+    width: 150px;}
+
 div.sheet-section-options select {
     border: 1px solid black;}
+
+div.sheet-section-options div.sheet-details-row{
+    width: 230px;
+    margin-bottom: 5px;}
+
 
 /* Show the button for buttons without labels */
 button.sheet-die-show::before {
