Weaverdice v.2.00: Sheet refactored down to skills

--- a/Weaverdice/Weaverdice.css
+++ b/Weaverdice/Weaverdice.css
@@ -1,10 +1,260 @@
-/*@import url('https://themes.googleusercontent.com/fonts/css?kit=fpjTOVmNbO4Lz34iLyptLUXza5VhXqVC6o75Eld_V98');*/
-.charsheet {
-	background-color: white;
-}        
+/*@import url('https://themes.googleusercontent.com/fonts/css?kit=fpjTOVmNbO4Lz34iLyptLUXza5VhXqVC6o75Eld_V98');*/       
 
 .charsheet .sheet-version::after {
-	content: 'Sheet Version 1.41';
+	content: 'Sheet Version 2.00 WIP';
+}
+
+/* ----------------------- */
+/*          new css        */
+/* ----------------------- */
+
+span{
+	padding:5px;
+}
+
+div.sheet-main{
+	width: 750px;
+	padding: 15px;
+}
+
+div.sheet-section{
+	display: flex;
+	margin: 1em 0em;
+	border: 2px solid grey;
+}
+
+
+/* Section specific */
+
+
+/*   Header  */
+div.sheet-header{
+	flex-flow: row wrap;
+	align-items: center;
+	background-image: url(https://parahumans.files.wordpress.com/2011/06/cityscape2.jpg);
+	background-size: 750px 150px;
+	background-repeat: no-repeat;
+	text-shadow:-2px 0 #000000,0 2px #000000,2px 0 #000000,0 -2px #000000;
+	color: white;
+}
+
+div.sheet-header span.sheet-title{
+	font-size: 380%;
+}
+
+div.sheet-header span.sheet-version{
+	font-size: small; 
+}
+
+div.sheet-header{
+	display: flex;
+	justify-content: center;
+}
+
+div.sheet-header input{
+	width: 300px;
+	font-size: 28px;
+	margin-bottom: 20px;
+}
+
+
+
+/*   Main info  */
+div.sheet-main-info{
+	display: flex;
+	flex-flow: row wrap;
+}
+
+div.sheet-main-info div{
+	display: flex;
+	flex-flow: row nowrap;
+	width: 48%;
+}
+
+div.sheet-main-info span{
+	background-color: gray;
+	font-weight: 600;
+	width: 100px;
+}
+
+div.sheet-main-info input{
+	width: 200px;
+	margin: 5px;
+}
+
+
+
+/*  WOUNDS */
+div.sheet-wounds{
+	display:grid;
+	grid-template-columns: repeat(9, 1fr);
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	height: 125px;
+}
+
+
+div.sheet-wounds div.sheet-title{
+	grid-column: span 9;
+	grid-row: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+div.sheet-wounds input[type="text"]{
+	width: 80px;
+}
+
+div.sheet-wounds span{
+	font-weight: 600;
+}
+
+div.sheet-wounds div{
+	border: 1px solid gray;
+}
+
+div.sheet-wounds div.sheet-title,
+div.sheet-wounds div.sheet-sub-title{
+	background-color: gray;
+}
+
+
+/* Stats & Gear */
+
+div.sheet-stats-inventory{
+	display: flex;
+}
+
+/* Stats */
+div.sheet-stats{
+	display: grid;
+	grid-auto-flow: column;
+	grid-template-rows: 0.3fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-auto-flow: column;
+	height:440px;
+	width: 46%;
+}
+
+div.sheet-stats div{
+	border: 1px solid grey;
+}
+
+div.sheet-stats div.sheet-title{
+	grid-column: span 4;
+	grid-row: 1;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	background-color: grey;
+}
+
+div.sheet-stats span{
+	font-weight: 600;
+}
+
+div.sheet-stats div.sheet-img-size{
+	background-size: 75px 75px;
+	background-repeat: no-repeat;
+}
+div.sheet-stats div.sheet-brawn-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/image2.png);
+}
+div.sheet-stats div.sheet-athletics-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/image4.png);
+}
+div.sheet-stats div.sheet-dexterity-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/image1.png);
+}
+div.sheet-stats div.sheet-wits-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/image3.png);
+}
+div.sheet-stats div.sheet-social-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/image6.png);
+}
+div.sheet-stats div.sheet-knowledge-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/image5.png);
+}
+div.sheet-stats div.sheet-guts-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/image7.png);
+}
+/*
+div.sheet-stats div.sheet-brawn-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/brawn.png);
+}
+div.sheet-stats div.sheet-athletics-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/athletics.png);
+}
+div.sheet-stats div.sheet-dexterity-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/dexterity.png);
+}
+div.sheet-stats div.sheet-wits-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/wits.png);
+}
+div.sheet-stats div.sheet-social-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/social.png);
+}
+div.sheet-stats div.sheet-knowledge-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/knowledge.png);
+}
+div.sheet-stats div.sheet-guts-img{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Weaverdice/images/guts.png);
+}
+*/
+
+/* Inventory */
+div.sheet-inventory{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 53%;
+	margin-left: 1em;
+}
+
+div.sheet-inventory span{
+	text-align: center;
+	font-weight: 600;
+}
+div.sheet-inventory input[name="attr_gearname"]{
+	width: 120px;
+}
+div.sheet-inventory input[name="attr_gearnotes"]{
+	width: 225px;
+}
+div.sheet-inventory input[type="number"]{
+	width: 32px;
+}
+
+
+/*   Appearance  */
+div.sheet-appearance{
+	display: flex;
+	flex-direction: row;
+}
+
+
+div.sheet-appearance div{
+	display: flex;
+	flex-direction: column;
+	width: 49%;
+	margin: 1em 0em;
+}
+
+div.sheet-appearance span{
+	background-color: gray;
+	text-align: center;
+	font-weight: 600;
+}
+
+div.sheet-appearance textarea{
+	width: 95%;
+}
+
+
+
+/* ---------- old css ------------------- */
+.charsheet {
+	background-color: white;
 }
 
 .charsheet  .sheet-bg-gray {
@@ -22,6 +272,7 @@
 	font-family: "Calibri";
 	font-weight: 700;
 }
+
 .charsheet  .sheet-tab-collps {
 	border-collapse: collapse;
 	margin-right: auto;
@@ -163,6 +414,7 @@
 	font-family: "Times New Roman";
 }
 
+/*
 .charsheet  .sheet-title {
 	padding-top: 12pt;
 	color: #000000;
@@ -174,7 +426,9 @@
 	orphans: 2;
 	widows: 2;
 	text-align: center;
-}        
+}*/
+
+/*
 .charsheet  .sheet-subtitle {
 	color: #000000;
 	font-size: 12pt;
@@ -184,7 +438,7 @@
 	orphans: 2;
 	widows: 2;
 	text-align: center;
-}		
+}*/
 .charsheet button[type=roll].sheet-d6-dice::before {	/*new die changes die roller to d6*/
 	font-family: 'dicefontd6',arial;
 	content: 'F ';
@@ -192,7 +446,7 @@
 }
 
 .charsheet  .sheet-header-container {
-	position: relative;
+	background-image: url(https://parahumans.files.wordpress.com/2011/06/cityscape2.jpg);
 	text-align: center;
 	color: white;
 	font-size: 450%;
@@ -259,6 +513,8 @@
 .charsheet input[type="radio"]:checked ~ input[type="radio"] + span::before {    
 	content: "";
 }
+
+
 /*-------------------------------------------*/
 /*------------- Roll Templates---------------*/
 
