refactor skills section into PUG

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -26,7 +26,7 @@ button {
   button[type="roll"], button[type="action"] {
     font-size: 1em;
     margin: 0px;
-    padding: 0px 0px; }
+    padding: 0px; }
   button:before {
     display: none; }
   button:hover {
@@ -106,6 +106,9 @@ textarea {
 .sheet-red {
   color: #610b0d; }
 
+.sheet-text-align-center {
+  text-align: center; }
+
 button.sheet-settings-button {
   height: 5%;
   margin-left: 1%; }
@@ -124,6 +127,11 @@ button.sheet-settings-button {
 .sheet-tab-switch[value="knowledge"] ~ .sheet-skills-know,
 .sheet-tab-switch[value="language"] ~ .sheet-skills-lang, .sheet-magic-toggle[value="spells"] ~ .sheet-magic-spells, .sheet-magic-toggle[value="preps"] ~ .sheet-magic-preps, .sheet-magic-toggle[value="rituals"] ~ .sheet-magic-rituals, .sheet-tab-switch[value="quality"] ~ .sheet-quality, .sheet-tab-switch[value="martial"] ~ .sheet-martial, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
   display: inline; }
+
+div.sheet-skill-box div.sheet-row-long {
+  display: inline-grid;
+  grid-column-gap: 1%;
+  grid-row-gap: 1%; }
 
 .sheet-options_toggle[value="arms"] ~ .sheet-arms, .sheet-options_toggle[value="augs"] ~ .sheet-augs, .sheet-options_toggle[value="core"] ~ .sheet-core, .sheet-options_toggle[value="gear"] ~ .sheet-gear, .sheet-options_toggle[value="options"] ~ .sheet-options, .sheet-options_toggle[value="social"] ~ .sheet-social, .sheet-options_toggle[value="magic"] ~ .sheet-magic, .sheet-options_toggle[value="matrix"] ~ .sheet-matrix, .sheet-options_toggle[value="vehicle"] ~ .sheet-vehicle, .sheet-character-type[value="magic"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, .sheet-character-type[value="resonance"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display,
 .sheet-static,
@@ -229,7 +237,7 @@ button.sheet-settings-button {
     font-size: 0.9em;
     line-height: 25px; }
   .sheet-pc h3 {
-    color: #b8b7b6;
+    color: rgba(51, 51, 51, 0.59);
     font-size: 0.8em; }
   .sheet-pc input[type="number"] {
     border: 1px solid #b8b7b6; }
@@ -317,7 +325,8 @@ button.sheet-settings-button {
   margin-left: 1.5px;
   margin-right: 1.5px;
   padding-left: 5px;
-  padding-right: 5px; }
+  padding-right: 5px;
+  height: auto; }
 
 .sheet-small-box {
   min-height: 150px; }
@@ -810,37 +819,51 @@ button.sheet-settings-button {
   width: 100%; }
 
 /***** SKILLS *****/
-.sheet-skill-box h3[data-i18n="skill"] {
-  margin-right: 47%; }
+div.sheet-skill-box button[type='roll'] {
+  font-size: 1em;
+  text-align: left; }
 
-.sheet-skill-box h3[data-i18n="attribute"] {
-  margin-left: 4%; }
-
-.sheet-skill-box h3[data-i18n="limit"] {
-  margin-left: 8%; }
-
-.sheet-skill-box label {
+div.sheet-skill-box label {
   display: inline-block;
   font-size: 0.8em;
   text-transform: capitalize; }
+  div.sheet-skill-box label:nth-of-type(1) {
+    grid-area: 1 / 3 / 1 / 5; }
+  div.sheet-skill-box label:nth-of-type(2) {
+    grid-area: 2 / 1 / 2 / 6; }
+  div.sheet-skill-box label:nth-of-type(3) {
+    grid-area: 3 / 1 / 3 / 6; }
+  div.sheet-skill-box label > input {
+    border-bottom: 1px solid #333;
+    text-align: left;
+    border-radius: 0px;
+    width: 100%; }
 
-.sheet-attr-select select {
-  position: absolute; }
-  .sheet-attr-select select[name="attr_attribute"] {
-    left: 62%; }
-  .sheet-attr-select select[name="attr_limit"] {
-    left: 82%; }
+div.sheet-skill-box input[name="attr_skill"] {
+  border-bottom: 1px solid #333;
+  width: 90%; }
 
-.sheet-attr-select option:nth-of-type(1n+9) {
+div.sheet-skill-box textarea {
+  grid-area: 4 / 1 / 4 / 6; }
+
+div.sheet-skill-box div.sheet-row-long {
+  width: 100%;
+  grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
+  margin-top: 1%; }
+  div.sheet-skill-box div.sheet-row-long h3:nth-of-type(1n+2) {
+    text-align: center; }
+
+div.sheet-skill-box div.sheet-border-bottom {
+  border-bottom: 1px solid #333; }
+
+div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+9) {
   color: #7a2593; }
 
-.sheet-attr-select option:nth-of-type(1n+5) {
+div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+5) {
   color: #610b0d; }
 
-.sheet-limit-select {
-  margin-left: 4%; }
-  .sheet-limit-select option:nth-of-type(1n+5) {
-    color: #610b0d; }
+div.sheet-skill-box select.sheet-limit-select option:nth-of-type(1n+5) {
+  color: #610b0d; }
 
 /***** SKILLS REPEATING SECTION *****/
 .sheet-skills-row, .sheet-quality-box .sheet-display,
@@ -848,10 +871,6 @@ button.sheet-settings-button {
 .sheet-contacts .sheet-settings div, .sheet-item-box .sheet-display,
 .sheet-item-box .sheet-settings div {
   /***** SKILLS SETTINGS ROWS *****/ }
-  .sheet-skills-row .sheet-name, .sheet-quality-box .sheet-display .sheet-name,
-  .sheet-quality-box .sheet-settings div .sheet-name, .sheet-contacts .sheet-display .sheet-name,
-  .sheet-contacts .sheet-settings div .sheet-name, .sheet-item-box .sheet-display .sheet-name,
-  .sheet-item-box .sheet-settings div .sheet-name,
   .sheet-skills-row select.sheet-skill-select, .sheet-quality-box .sheet-display select.sheet-skill-select,
   .sheet-quality-box .sheet-settings div select.sheet-skill-select, .sheet-contacts .sheet-display select.sheet-skill-select,
   .sheet-contacts .sheet-settings div select.sheet-skill-select, .sheet-item-box .sheet-display select.sheet-skill-select,
@@ -901,11 +920,6 @@ option.sheet-option-groups {
 input.sheet-skill-select {
   opacity: 1;
   width: 3%; }
-
-/***** SKILLS DISPLAY *****/
-.sheet-skill-box .sheet-name {
-  display: inline-block;
-  min-height: 20px; }
 
 /***** ARMS *****/
 .sheet-arms .sheet-htab {
@@ -1054,28 +1068,23 @@ input.sheet-skill-select {
   width: 43%; }
 
 /***** LIFESTYLES *****/
-.sheet-lifestyle h3:nth-of-type(2) {
-  margin-right: 1%; }
-
-.sheet-lifestyle input[type="text"] {
-  background-color: transparent; }
-
-.sheet-lifestyle input[type="text"]:hover,
-.sheet-lifestyle input[type="text"]:focus {
-  background-color: #d2d1cd; }
-
-/***** LIFESTYLE SETTINGS *****/
-.sheet-lifestyle textarea {
-  min-height: 30px;
-  margin: 0px 0px 0px 0px; }
-
-/***** LIFESTYLE DISPLAY *****/
-.sheet-lifestyle .sheet-display-flag:checked ~ span:nth-of-type(1),
-.sheet-lifestyle .sheet-display-flag ~ span:nth-of-type(1n+2) {
-  display: none; }
-
-.sheet-lifestyle .sheet-display-flag:checked ~ span:nth-of-type(1n+2) {
-  display: inherit; }
+.sheet-lifestyle {
+  /***** LIFESTYLE SETTINGS *****/
+  /***** LIFESTYLE DISPLAY *****/ }
+  .sheet-lifestyle h3:nth-of-type(2) {
+    margin-right: 1%; }
+  .sheet-lifestyle input[type="text"] {
+    background-color: transparent; }
+    .sheet-lifestyle input[type="text"]:hover, .sheet-lifestyle input[type="text"]:focus {
+      background-color: #d2d1cd; }
+  .sheet-lifestyle textarea {
+    min-height: 30px;
+    margin: 0px 0px 0px 0px; }
+  .sheet-lifestyle .sheet-display-flag:checked ~ span:nth-of-type(1),
+  .sheet-lifestyle .sheet-display-flag ~ span:nth-of-type(1n+2) {
+    display: none; }
+  .sheet-lifestyle .sheet-display-flag:checked ~ span:nth-of-type(1n+2) {
+    display: inherit; }
 
 /***** CONTACTS *****/
 .sheet-contacts h3:nth-of-type(1) {
@@ -1818,7 +1827,8 @@ input.sheet-settings-toggle:checked ~ .sheet-attr-col .sheet-attr-und div.sheet-
 input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
 input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
 input.sheet-settings-toggle[value="settings"] ~ div.sheet-display,
-input.sheet-settings-toggle[value="display"] ~ div.sheet-settings {
+input.sheet-settings-toggle[value="display"] ~ div.sheet-settings,
+input.sheet-settings-toggle[value="display"] ~ div.sheet-settings-grid {
   display: none; }
 
 .sheet-display,
