--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -29,7 +29,8 @@
 		&[type="action"] {
 			font-size: 1em;
 			margin: 0px;
-			padding: 0px 0px;}
+			padding: 0px;
+		}
 
 		&:before {display: none;}
 		&:hover {background-color: transparent;}
@@ -120,6 +121,7 @@
 	.charsheet { width: 850px; }
 
 	.sheet-red {color: #610b0d;  }
+	.sheet-text-align-center {text-align: center;}
 
 	button.sheet-settings-button {
 		height: 5%;
@@ -132,6 +134,12 @@
 	
 	%display-none { display: none; }
 	%display-inline { display: inline; }
+	%display-inline-grid { 
+		display: inline-grid;
+		grid-column-gap: 1%;
+		grid-row-gap: 1%;
+	}
+	%display-grid { display: grid; }
 
 	%display-inline-block,
 	.sheet-static,
@@ -291,7 +299,7 @@
 		}
 	
 		h3 {
-			color    : #b8b7b6;
+			color    : hsla(0, 0%, 20%, 0.59);
 			font-size: 0.8em;
 		}
 
@@ -406,7 +414,9 @@
 		margin-left     : 1.5px;
 		margin-right    : 1.5px;
 		padding-left    : 5px;
-		padding-right   : 5px;}
+		padding-right   : 5px;
+		height: auto;
+	}
 
 	.sheet-small-box {
 		min-height: 150px;}
@@ -1014,41 +1024,63 @@
 	}
 
 	/***** SKILLS *****/
-	.sheet-skill-box {
-		h3 {
-			&[data-i18n="skill"] {margin-right: 47%;}
-			&[data-i18n="attribute"] {margin-left: 4%;}
-			&[data-i18n="limit"] {margin-left: 8%;}
+	div.sheet-skill-box {
+		button[type='roll'] {
+			font-size: 1em;
+			text-align: left; 
 		}
 
 		label {
 			display       : inline-block;
 			font-size     : 0.8em;
 			text-transform: capitalize;
+
+			&:nth-of-type(1) { grid-area: 1 / 3 / 1 / 5;}
+			&:nth-of-type(2) {grid-area: 2 / 1 / 2 / 6;}
+			&:nth-of-type(3) {grid-area: 3 / 1 / 3 / 6;}
+
+			& > input {
+				border-bottom: 1px solid #333;
+				text-align: left;
+				border-radius: 0px;
+				width: 100%;
+			}
 		}
-	}
 
-	.sheet-attr-select {
-		select {
-			position: absolute;
-	
-			&[name="attr_attribute"] {left: 62%; }
-			&[name="attr_limit"] {left: 82%;}
+		input[name="attr_skill"] { 
+			border-bottom: 1px solid #333;
+			width: 90%; 
 		}
 
-		option:nth-of-type(1n+9) { color: #7a2593;	}
-		option:nth-of-type(1n+5) { color: #610b0d; }
-	}
+		textarea{grid-area: 4 / 1 / 4 / 6;}
 
-	.sheet-limit-select  {
-		margin-left: 4%;
+		div.sheet-row-long {
+			@extend %display-inline-grid;
+			width: 100%;
+			grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
+			margin-top: 1%;
 
-		option:nth-of-type(1n+5) { color: #610b0d; }
+			h3:nth-of-type(1n+2) {
+				text-align: center;;
+			}
+		}
+
+		div.sheet-border-bottom {
+			border-bottom: 1px solid #333;
+		}
+
+		select.sheet-attribute-select {
+			option:nth-of-type(1n+9) { color: #7a2593;	}
+			option:nth-of-type(1n+5) { color: #610b0d; }
+		}
+
+		select.sheet-limit-select  {
+			option:nth-of-type(1n+5) { color: #610b0d; }
+		}
 	}
 
 	/***** SKILLS REPEATING SECTION *****/
 	.sheet-skills-row {
-		.sheet-name,
 		select.sheet-skill-select,
 		.sheet-settings input[type="text"] {
 			width: 50%;
@@ -1076,7 +1108,6 @@
 
 			input[type="text"] {width: 45%;}
 		}
-
 	}
 
 	option.sheet-option-headers {opacity: 0.2;}
@@ -1090,12 +1121,6 @@
 		opacity: 1;
 		width: 3%;
 	}
-
-	/***** SKILLS DISPLAY *****/
-		.sheet-skill-box .sheet-name {
-			display: inline-block;
-			min-height: 20px;
-		}
 
 /***** ARMS *****/
 	.sheet-arms {
@@ -1278,27 +1303,33 @@
 		}
 
 	/***** LIFESTYLES *****/
-		.sheet-lifestyle h3:nth-of-type(2) {
-			margin-right: 1%;}
+		.sheet-lifestyle {
+			h3:nth-of-type(2) { margin-right: 1%;}
 
-		.sheet-lifestyle input[type="text"] {
-			background-color: transparent;}
+			input[type="text"] {
+				background-color: transparent;
 
-		.sheet-lifestyle input[type="text"]:hover,
-		.sheet-lifestyle input[type="text"]:focus {
-			background-color: #d2d1cd;}
+				&:hover,
+				&:focus {
+					background-color: #d2d1cd;
+				}
+			}
 
-		/***** LIFESTYLE SETTINGS *****/
-			.sheet-lifestyle textarea {
+			/***** LIFESTYLE SETTINGS *****/
+			textarea {
 				min-height: 30px;
-				margin    : 0px 0px 0px 0px;}
+				margin    : 0px 0px 0px 0px;
+			}
 
-		/***** LIFESTYLE DISPLAY *****/
-			.sheet-lifestyle .sheet-display-flag:checked ~ span:nth-of-type(1),
-			.sheet-lifestyle .sheet-display-flag ~ span:nth-of-type(1n+2) {
-				display: none;}
+			/***** LIFESTYLE DISPLAY *****/
+			.sheet-display-flag:checked ~ span:nth-of-type(1),
+			.sheet-display-flag ~ span:nth-of-type(1n+2) {
+				display: none;
+			}
 
-			.sheet-lifestyle .sheet-display-flag:checked ~ span:nth-of-type(1n+2) {display: inherit;}
+			.sheet-display-flag:checked ~ span:nth-of-type(1n+2) {display: inherit;}
+		}
+
 
 	/***** CONTACTS *****/
 		.sheet-contacts h3:nth-of-type(1) {margin-right: 50%;}
@@ -1983,7 +2014,8 @@
 		input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
 		input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
 		input.sheet-settings-toggle[value="settings"] ~ div.sheet-display,
-		input.sheet-settings-toggle[value="display"] ~ div.sheet-settings  {
+		input.sheet-settings-toggle[value="display"] ~ div.sheet-settings,
+		input.sheet-settings-toggle[value="display"] ~ div.sheet-settings-grid  {
 			display: none;}
 
 		.sheet-display,
