fix medium-height on boxes

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -332,7 +332,7 @@ div.sheet-skill-box div.sheet-row-long {
   min-height: 150px; }
 
 .sheet-medium-box {
-  height: 330px; }
+  min-height: 330px; }
 
 /***** PLAYER DATA INPUTS *****/
 .sheet-info-box {
