--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -422,7 +422,7 @@
 		min-height: 150px;}
 
 	.sheet-medium-box {
-		height: 330px;}
+		min-height: 330px;}
 
 /***** PLAYER DATA INPUTS *****/
 	.sheet-info-box {
