--- a/Symbaroum/symbaroum.pug
+++ b/Symbaroum/symbaroum.pug
@@ -76,13 +76,13 @@ input.tab(name="attr_page-number" type="hidden" value="1")
 		button(data-i18n-title="title-choose-dice-and-roll" name="roll_corruption" title="Pick a dice value (to the right) and hit this button to roll" type="roll" value="/roll @{corruption-d} for Corruption...")
 		select(name="attr_corruption-d")
 			+diceSelect("d4")
-		label.center(ata-i18n-title="corruption input" title="corruption input")
+		label.center(data-i18n-title="corruption input" title="corruption input")
 			input.center(name="attr_corruption" min="0" title="@{corruption}" type="number" value="0")
 		span.center(data-i18n="temporary-abbrv") Temp.
-		label.center(ata-i18n-title="permanent corruption input" title="permanent corruption input")
+		label.center(data-i18n-title="permanent corruption input" title="permanent corruption input")
 			input.center(name="attr_corruption_permanent" min="0" title="@{corruption_permanent}" type="number"  value="0")
 		span.center(data-i18n="permanent-abbrv") Perm.
-		label.center(ata-i18n-title="corruption threshold" title="corruption threshold")
+		label.center(data-i18n-title="corruption threshold" title="corruption threshold")
 			input.center(name="attr_corruption_threshold" title="@{corruption_threshold}" type="number"  value="ceil(@{resolute}/2)" disabled="true")
 		span.center(data-i18n="threshold") Threshold
 	.grid.attacks.section-pc1
