--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -555,13 +555,18 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 120px;
+    height: 240px;
+    padding: 0 4px;
 }
 
-.sheet-row-details.sheet-notebox div.sheet-col-notebox {
-    width: 100%;
+.sheet-row-details.sheet-notebox input {
+    text-align: left;
+    width: 88%;
 }
 
+.sheet-row-details.sheet-notebox .sheet-row-misc {
+    height: 22px;
+}
 
 .sheet-row-details.sheet-notebox div.sheet-col-notebox div.sheet-show-notes {
     text-align: left;
@@ -578,10 +583,29 @@ input.sheet-tab0 + span {
     font-style: italic;
 }
 
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes {
+    height: 22px;
+    margin-bottom: 5px;
+}
 
-.sheet-cell.sheet-col-notebox textarea {
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-title {
+    width: 132px;
+    float: left;
+    font-weight: bold;
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input {
+    float: left;
+    width: calc(100% - 160px);
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input input {
+    width: 100%;
+}
+
+.sheet-col-notebox textarea {
     height: 67px;
-    width: 99%;
+    width: 98%;
 }
 
 
