--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -603,6 +603,10 @@ input.sheet-tab0 + span {
     width: 100%;
 }
 
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-tooltip {
+    margin-left: 0px;
+}
+
 .sheet-col-notebox textarea {
     height: 67px;
     width: 98%;
